--- a/views/add-project.html
+++ b/views/add-project.html
@@ -13,7 +13,7 @@
     />
 
     <!-- Link To CSS -->
-    <link rel="stylesheet" href="CSS/add-project.css" />
+    <link rel="stylesheet" href="public/CSS/add-project.css" />
 
     <!-- Box Icons -->
     <link
@@ -45,10 +45,7 @@
         >
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a
-                class="nav-link text-navbar"
-                aria-current="page"
-                href="index.html"
+              <a class="nav-link text-navbar" aria-current="page" href="/"
                 >Home</a
               >
             </li>
@@ -56,13 +53,13 @@
               <a class="nav-link text-navbar active" href="#">My Project</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-navbar" href="testimonials.html"
+              <a class="nav-link text-navbar" href="testimonials"
                 >Testimonials</a
               >
             </li>
           </ul>
           <a
-            href="contact.html"
+            href="contact"
             class="text-decoration-none text-white border border-white rounded p-2 contact-nav"
             >Contact Me</a
           >
@@ -81,20 +78,40 @@
         </h2>
 
         <!-- Form Add Project -->
-        <form style="width: 500px" onsubmit="projectCard(event)">
+        <form
+          style="width: 500px"
+          onsubmit="projectCard(event)"
+          action="/add-project"
+          method="post"
+        >
           <div class="mb-3">
             <label for="input-name" class="form-label">Project Name</label>
-            <input type="text" class="form-control" id="input-name" />
+            <input
+              type="text"
+              class="form-control"
+              id="input-name"
+              name="input-name"
+            />
           </div>
 
           <div class="d-flex justify-content-between">
             <div class="mb-3">
               <label for="input-startdate" class="form-label">Start Date</label>
-              <input type="date" class="form-control" id="input-startdate" />
+              <input
+                type="date"
+                class="form-control"
+                id="input-startdate"
+                name="input-startdate"
+              />
             </div>
             <div class="mb-3">
               <label for="input-enddate" class="form-label">End Date</label>
-              <input type="date" class="form-control" id="input-enddate" />
+              <input
+                type="date"
+                class="form-control"
+                id="input-enddate"
+                name="input-enddate"
+              />
             </div>
           </div>
 
@@ -113,21 +130,41 @@
           <div class="checkbox-group d-flex justify-content-between">
             <div>
               <div class="mb-3">
-                <input type="checkbox" id="javascript" class="multi-input" />
+                <input
+                  type="checkbox"
+                  id="javascript"
+                  class="multi-input"
+                  name="javascript"
+                />
                 <label for="javascript" class="form-label">Javascript</label>
               </div>
               <div class="mb-3">
-                <input type="checkbox" id="react-js" class="multi-input" />
+                <input
+                  type="checkbox"
+                  id="react-js"
+                  class="multi-input"
+                  name="react-js"
+                />
                 <label for="reactjs" class="form-label">React JS</label>
               </div>
             </div>
             <div>
               <div class="mb-3">
-                <input type="checkbox" id="node-js" class="multi-input" />
+                <input
+                  type="checkbox"
+                  id="node-js"
+                  class="multi-input"
+                  name="node-js"
+                />
                 <label for="nodejs" class="form-label">Node JS</label>
               </div>
               <div class="mb-3">
-                <input type="checkbox" id="css3" class="multi-input" />
+                <input
+                  type="checkbox"
+                  id="css3"
+                  class="multi-input"
+                  name="css3"
+                />
                 <label for="css3" class="form-label">CSS 3</label>
               </div>
             </div>
@@ -135,178 +172,19 @@
 
           <div class="mb-3">
             <label for="input-image" class="form-label">Upload Image</label>
-            <input type="file" class="form-control" id="input-image" required />
+            <input
+              type="file"
+              class="form-control"
+              id="input-image"
+              name="input-image"
+            />
           </div>
 
-          <button class="btn btn-primary">Submit</button>
+          <button type="submit" class="btn btn-primary">Submit</button>
         </form>
       </div>
     </div>
     <!-- Add Project End -->
-
-    <!-- My Project Start -->
-    <div class="container">
-      <h2 class="fw-bold text-center" style="margin: 50px auto">
-        <span style="color: #83b735">My</span> Projects
-      </h2>
-
-      <div class="list-project" id="contents">
-        <!-- Project 1 -->
-        <div class="list-project-detail">
-          <div class="card" style="width: 18rem">
-            <img
-              src="assets/images/post-1.jpg"
-              class="card-img-top"
-              alt="project-image"
-              style="object-fit: cover; height: 190px"
-            />
-            <div class="card-body">
-              <a
-                href="detail-project.html"
-                style="
-                  font-size: 22px;
-                  font-weight: 550;
-                  text-decoration: none;
-                  color: #000;
-                "
-                >Mobile Apps 2023</a
-              >
-
-              <p style="margin: 0">2 Januari 2023 | Seeus</p>
-              <p
-                style="
-                  margin: 0;
-                  margin-bottom: 10px;
-                  font-size: 12px;
-                  color: gray;
-                "
-              >
-                A month ago
-              </p>
-              <p class="card-text" style="font-size: 14px">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
-              </p>
-              <div class="card-skill">
-                <i class="bx bxl-html5 mb-3" style="font-size: 32px"></i>
-              </div>
-              <div class="card-button d-flex justify-content-between">
-                <a
-                  href="#"
-                  class="btn card-btn"
-                  style="flex: 50%; margin-right: 10px; font-size: 16px"
-                  >Edit</a
-                >
-                <a href="#" class="btn card-btn" style="flex: 50%">Delete</a>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <!-- Project 2 -->
-        <!-- <div class="list-project-detail">
-          <div class="card" style="width: 18rem">
-            <img
-              src="assets/images/post-2.jpg"
-              class="card-img-top"
-              alt="project-image"
-              style="object-fit: cover; height: 190px"
-            />
-            <div class="card-body">
-              <a
-                href="detail-project.html"
-                style="
-                  font-size: 22px;
-                  font-weight: 550;
-                  text-decoration: none;
-                  color: #000;
-                "
-                >Mobile Apps 2023</a
-              >
-              <p style="margin: 0">2 Januari 2023 | Seeus</p>
-              <p
-                style="
-                  margin: 0;
-                  margin-bottom: 10px;
-                  font-size: 12px;
-                  color: gray;
-                "
-              >
-                A month ago
-              </p>
-              <p class="card-text" style="font-size: 14px">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
-              </p>
-              <div class="card-skill">
-                <i class="bx bxl-html5 mb-3" style="font-size: 32px"></i>
-              </div>
-              <div class="card-button d-flex justify-content-between">
-                <a
-                  href="#"
-                  class="btn card-btn"
-                  style="flex: 50%; margin-right: 10px"
-                  >Edit</a
-                >
-                <a href="#" class="btn card-btn" style="flex: 50%">Delete</a>
-              </div>
-            </div>
-          </div>
-        </div> -->
-
-        <!-- Project 3 -->
-        <!-- <div class="list-project-detail">
-          <div class="card" style="width: 18rem">
-            <img
-              src="assets/images/post-4.jpg"
-              class="card-img-top"
-              alt="project-image"
-              style="object-fit: cover; height: 190px"
-            />
-            <div class="card-body">
-              <a
-                href="detail-project.html"
-                style="
-                  font-size: 22px;
-                  font-weight: 550;
-                  text-decoration: none;
-                  color: #000;
-                "
-                >Mobile Apps 2023</a
-              >
-              <p style="margin: 0">2 Januari 2023 | Seeus</p>
-              <p
-                style="
-                  margin: 0;
-                  margin-bottom: 10px;
-                  font-size: 12px;
-                  color: gray;
-                "
-              >
-                A month ago
-              </p>
-              <p class="card-text" style="font-size: 14px">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
-              </p>
-              <div class="card-skill">
-                <i class="bx bxl-html5 mb-3" style="font-size: 32px"></i>
-              </div>
-              <div class="card-button d-flex justify-content-between">
-                <a
-                  href="#"
-                  class="btn card-btn"
-                  style="flex: 50%; margin-right: 10px"
-                  >Edit</a
-                >
-                <a href="#" class="btn card-btn" style="flex: 50%">Delete</a>
-              </div>
-            </div>
-          </div>
-        </div> -->
-      </div>
-    </div>
-    <!-- My Project End -->
 
     <!-- Footer Start -->
     <footer class="copyright">
