--- a/views/testimonials.html
+++ b/views/testimonials.html
@@ -14,7 +14,7 @@
     />
 
     <!-- Link To CSS -->
-    <link rel="stylesheet" href="CSS/testimonials.css" />
+    <link rel="stylesheet" href="public/CSS/testimonials.css" />
 
     <!-- Box Icons -->
     <link
@@ -46,26 +46,21 @@
         >
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a
-                class="nav-link text-navbar"
-                aria-current="page"
-                href="index.html"
+              <a class="nav-link text-navbar" aria-current="page" href="/"
                 >Home</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link text-navbar" href="projects.html"
-                >My Project</a
-              >
+              <a class="nav-link text-navbar" href="projects">My Project</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-navbar active" href="testimonials.html"
+              <a class="nav-link text-navbar active" href="testimonials"
                 >Testimonials</a
               >
             </li>
           </ul>
           <a
-            href="contact.html"
+            href="contact"
             class="text-decoration-none text-white border border-white rounded p-2 contact-nav"
             >Contact Me</a
           >
@@ -96,7 +91,7 @@
         <div class="list-testimonials" style="margin-top: 50px">
           <div class="card" style="width: 18rem">
             <img
-              src="assets/images/post-1.jpg"
+              src="public/images/post-1.jpg"
               class="card-img-top"
               alt="project-image"
               style="
@@ -119,7 +114,7 @@
         <div class="list-testimonials" style="margin-top: 50px">
           <div class="card" style="width: 18rem">
             <img
-              src="assets/images/post-5.jpg"
+              src="public/images/post-5.jpg"
               class="card-img-top"
               alt="project-image"
               style="
@@ -142,7 +137,7 @@
         <div class="list-testimonials" style="margin-top: 50px">
           <div class="card" style="width: 18rem">
             <img
-              src="assets/images/post-4.jpg"
+              src="public/images/post-4.jpg"
               class="card-img-top"
               alt="project-image"
               style="
@@ -166,7 +161,7 @@
         <div class="list-testimonials" style="margin-top: 50px">
           <div class="card" style="width: 18rem">
             <img
-              src="assets/images/post-2.jpg"
+              src="public/images/post-2.jpg"
               class="card-img-top"
               alt="project-image"
               style="
@@ -190,7 +185,7 @@
         <div class="list-testimonials" style="margin-top: 50px">
           <div class="card" style="width: 18rem">
             <img
-              src="assets/images/profile.jpg"
+              src="public/images/profile.jpg"
               class="card-img-top"
               alt="project-image"
               style="
